lorentz_equivariant_gnn/notebooks/wandb/run-20210824_121313-dq34hp9v/files/output.log
Set SLURM handle signals.

  | Name        | Type   | Params
---------------------------------------
0 | feature_in  | Linear | 64    
1 | feature_out | Linear | 66    
2 | gcl_0       | L_GCL  | 7.4 K 
3 | gcl_1       | L_GCL  | 7.4 K 
4 | gcl_2       | L_GCL  | 7.4 K 
5 | gcl_3       | L_GCL  | 7.4 K 
6 | gcl_4       | L_GCL  | 7.4 K 
7 | gcl_5       | L_GCL  | 7.4 K 
---------------------------------------
44.7 K    Trainable params
0         Non-trainable params
44.7 K    Total params
0.179     Total estimated model params size (MB)
/global/homes/d/danieltm/.conda/envs/exatrkx-test/lib/python3.7/site-packages/pytorch_lightning/trainer/data_loading.py:103: UserWarning: The dataloader, val dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 80 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.
  f'The dataloader, {name}, does not have many workers which may be a bottleneck.'
GPU available: True, used: True
TPU available: False, using: 0 TPU cores
LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]
Set SLURM handle signals.

  | Name        | Type   | Params
---------------------------------------
0 | feature_in  | Linear | 64    
1 | feature_out | Linear | 66    
2 | gcl_0       | L_GCL  | 7.4 K 
3 | gcl_1       | L_GCL  | 7.4 K 
4 | gcl_2       | L_GCL  | 7.4 K 
5 | gcl_3       | L_GCL  | 7.4 K 
6 | gcl_4       | L_GCL  | 7.4 K 
7 | gcl_5       | L_GCL  | 7.4 K 
---------------------------------------
44.7 K    Trainable params
0         Non-trainable params
44.7 K    Total params
0.179     Total estimated model params size (MB)
GPU available: True, used: True
TPU available: False, using: 0 TPU cores
LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]
Set SLURM handle signals.

  | Name        | Type   | Params
---------------------------------------
0 | feature_in  | Linear | 64    
1 | feature_out | Linear | 66    
2 | gcl_0       | L_GCL  | 7.4 K 
3 | gcl_1       | L_GCL  | 7.4 K 
4 | gcl_2       | L_GCL  | 7.4 K 
5 | gcl_3       | L_GCL  | 7.4 K 
6 | gcl_4       | L_GCL  | 7.4 K 
7 | gcl_5       | L_GCL  | 7.4 K 
---------------------------------------
44.7 K    Trainable params
0         Non-trainable params
44.7 K    Total params
0.179     Total estimated model params size (MB)
GPU available: True, used: True
TPU available: False, using: 0 TPU cores
LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]
Set SLURM handle signals.

  | Name        | Type   | Params
---------------------------------------
0 | feature_in  | Linear | 64    
1 | feature_out | Linear | 66    
2 | gcl_0       | L_GCL  | 7.4 K 
3 | gcl_1       | L_GCL  | 7.4 K 
4 | gcl_2       | L_GCL  | 7.4 K 
5 | gcl_3       | L_GCL  | 7.4 K 
6 | gcl_4       | L_GCL  | 7.4 K 
7 | gcl_5       | L_GCL  | 7.4 K 
---------------------------------------
44.7 K    Trainable params
0         Non-trainable params
44.7 K    Total params
0.179     Total estimated model params size (MB)
GPU available: True, used: True
TPU available: False, using: 0 TPU cores
LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]
Set SLURM handle signals.

  | Name        | Type   | Params
---------------------------------------
0 | feature_in  | Linear | 64    
1 | feature_out | Linear | 66    
2 | gcl_0       | L_GCL  | 7.4 K 
3 | gcl_1       | L_GCL  | 7.4 K 
4 | gcl_2       | L_GCL  | 7.4 K 
5 | gcl_3       | L_GCL  | 7.4 K 
6 | gcl_4       | L_GCL  | 7.4 K 
7 | gcl_5       | L_GCL  | 7.4 K 
---------------------------------------
44.7 K    Trainable params
0         Non-trainable params
44.7 K    Total params
0.179     Total estimated model params size (MB)
[autoreload of lorentz_equivariant_gnn.architectures.models.legnn failed: Traceback (most recent call last):
  File "/global/homes/d/danieltm/.local/lib/python3.7/site-packages/IPython/extensions/autoreload.py", line 245, in check
    superreload(m, reload, self.old_objects)
  File "/global/homes/d/danieltm/.local/lib/python3.7/site-packages/IPython/extensions/autoreload.py", line 394, in superreload
    module = reload(module)
  File "/global/homes/d/danieltm/.conda/envs/exatrkx-test/lib/python3.7/imp.py", line 314, in reload
    return importlib.reload(module)
  File "/global/homes/d/danieltm/.conda/envs/exatrkx-test/lib/python3.7/importlib/__init__.py", line 169, in reload
    _bootstrap._exec(spec, module)
  File "<frozen importlib._bootstrap>", line 630, in _exec
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "../../lorentz_equivariant_gnn/architectures/models/legnn.py", line 88
    message_aggregate = unsorted_segment_sum(messages, row, num_segments = h.size(0), self.device)
                                                                                     ^
SyntaxError: positional argument follows keyword argument
]
